fixed alignment

--- a/style.css
+++ b/style.css
@@ -41,11 +41,19 @@
     font-size: 10;
   }
   #welcome desc{
-    font-weight: 500;
-    margin: 5px 30px 12px 30px;
-    color: var(--text);
+    text-align: center;
+    color: var(--prim);
     font-size: 20px;
-    align-items: center;
+    font-style: normal;
+    font-weight: 400;
+  }
+  #welcome highlightblue{
+    text-align: center;
+    color: var(--footer);
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
   }
   
   #welcome img{
@@ -75,7 +83,7 @@
   
   .toastBtn img{
     margin-top: 8px;
-    max-width: 250px;
+    width: 800px;
   }
   
   .image{
@@ -86,28 +94,6 @@
   
   .image:hover{
     opacity: 0;
-  }
-  
-  #footer{
-    width: 100%;
-    position: fixed;
-    bottom: 0;
-    display: block;
-    text-align: center;
-    background-color: #8a3521;
-    color: var(--text);
-  }
-  
-  .footTxt h3{
-    font-size: 12px;
-    margin-top: 8px;
-    margin-bottom: 0;
-  }
-  
-  .footTxt p{
-    margin-top: 0;
-    font-size: 10px;
-    margin-bottom: 10;
   }
   
   /* js - poster result */
